--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,12 @@ body {
   font-size: 20px;
   font-family: "Livvic", sans-serif;
 }
+
+main {
+  max-width: 1220px;
+  margin: 0 auto
+}
+
 #site-header {
   display: flex;
 }
@@ -11,14 +17,40 @@ h1,h2 {
   letter-spacing: 0.03em;
 }
 
-.img-main{
-  width: 250px;
+figure {
+  min-width: 250px;
+
+  margin: 0;
+  display: inline-block;
+  /* overflow: hidden; */
 }
 
+figure img.img-main {
+  width: 100%;
+  /* height: 100%; */
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
+
+figure:first-of-type img.img-main {
+  object-position: bottom;
+}
+
+figure:last-of-type img.img-main {
+  object-position: bottom;
+}
 figcaption {
   color: rgb(95, 95, 140,0.8);
 }
 
 #gallery {
   display: flex;
+  /* height: 220px; */
+  /* overflow-x: auto; */
+  overflow-y: hidden;
+  gap: 16px;
+  padding: 10px;
+  scroll-behavior: smooth;
+  background: #fce6fb;
 }
